# pyALS-RF

./: .gitignore  .gitmodules  README.md  config.ini  edginess  lut_catalog.db  pyals-rf  requirements.txt  run_experiments.sh  test_regressor.py  test_regressor_synth.py  train
Docker/: Dockerfile  build  run
Docker/resources/: Makefile.conf  requirements.txt
example/avila/: avila.txt  config.json
example/configs/: config_onestep.ini  config_ps.ini  config_twosteps.ini
example/decision_tree/: config_als_onestep.json  config_als_twosteps.json  config_ps.json  model.pmml
example/random_forest/: config_als_onestep.json  config_als_twosteps.json  config_ps.json  dataset.txt  model.pmml
resources/: CMakeLists.txt.template
resources/vhd/tb/oracles_generator/: CMakeLists.txt  build.sh  tb_combiner.c  tb_decision_box_fp.cc  tb_decision_box_int.c  tb_parallel_comparator.c
scripts/: run_docker
src/: ALSCatalog.py  ALSGraph.py  ALSRewriter.py  ALSSMT.py  AMOSA.py  BaseMop.py  Classifier.py  ConfigParser.py  Configs.py  Conversion.py  DecisionBox.py  DecisionTree.py  DtGenConfigParser.py  ErrorConfig.py  FirstStepAlsMop.py  FirstStepOptimizer.py  HDLGenerator.py  MOP.py  OneStepConfigParser.py  OneStepOptimizer.py  Optimizer.py  PruningHdlGenerator.py  PsConfigParser.py  PsHdlGenerator.py  PsMop.py  SecondStepAlsMop.py  SecondStepAlsWcMop.py  SecondStepBaseMop.py  SecondStepCombinedMop.py  SecondStepOptimizer.py  SecondStepWcBaseMop.py  SingleStepAlsHdlGenerator.py  SingleStepAlsMop.py  SingleStepAlsWcHdlGenerator.py  SingleStepAlsWcMop.py  SingleStepCombined.py  SingleStepCombinedMop.py  SingleStepFullHdlGenerator.py  TwoStepsAlsHdlGenerator.py  TwoStepsAlsWcHdlGenerator.py  (+20 more)
(+110 files in other folders)
